A number of improvements related to OpenCL BLAS in iterative solver (after r1349). - USE_CLBLAS renamed into OCL_BLAS. There is little order in naming of such options currently. But the idea is that "use" is redundant (USE_SSE3 will probably be removed in the future), while OpenCL options should start with OCL (CLFFT_... are currently exceptions). - ocl/Makefile now includes additional information about clAmdBlas. Makefile produces message about using option OCL_BLAS. - Output of '-V' now gives the version of clAmdBlas (during compilation) and extra make option (OCL_BLAS). In full-debug mode ADDA also gives the version of clAmdBlas that is linked at runtime (during normal execution). - slightly improved intitialization of complex scalars to remove compiler warnings. - added error checks (CL_CH_ERR) to many ocl function calls. - changed type of bufupload from cl_bool to bool. - removed typecasts of local_nrows to size_t (already this type). - additional buffer allocation (and release) in fft.c was changed to happen only for BiCG iterative solver.
Remaining issues:
- same limitations as with r1349.
- compilation problems on Windows (workarounds exist, will be addressed further).

Other changes:
- added NO_SVNREV to a list of valid options in Makefile and to output of '-V'. It was forgotten during r1231, hence this option has not been working through a command line to make. Also an information message is given during compilation.
- param.c now includes oclAmdFft.version.h instead of oclAmdFft.h (should be sufficient).

--- a/src/Makefile
+++ b/src/Makefile
@@ -85,7 +85,7 @@ ifneq ($(if $(MAKECMDGOALS),$(if $(filter $(NONTRIVIAL),$(MAKECMDGOALS)),1,),1),
 # one argument in quotes with its parts separated by spaces, e.g. 'make OPTIONS="DEBUG FFT_TEMPERTON" ...'. OPTIONS that
 # are uncommented below are appended to the list specified elsewhere. Full list of possible options is the following:
 VALID_OPTS := DEBUG DEBUGFULL FFT_TEMPERTON PRECISE_TIMING NOT_USE_LOCK ONLY_LOCKFILE NO_FORTRAN NO_CPP \
-              OVERRIDE_STDC_TEST OCL_READ_SOURCE_RUNTIME CLFFT_APPLE SPARSE USE_SSE3 USE_CLBLAS
+              OVERRIDE_STDC_TEST OCL_READ_SOURCE_RUNTIME CLFFT_APPLE SPARSE USE_SSE3 OCL_BLAS NO_SVNREV
 # Debug mode. By default, release configuration is used (no debug, no warnings, maximum optimization). DEBUG turns on
 # producing debugging symbols (-g) and warnings and brings optimization down to O2 (this is required to produce all
 # possible warnings by the compiler). DEBUGFULL turns off optimization completely (for more accurate debugging symbols)
@@ -127,9 +127,8 @@ VALID_OPTS := DEBUG DEBUGFULL FFT_TEMPERTON PRECISE_TIMING NOT_USE_LOCK ONLY_LOC
 # APPLE clFFT (fft.h)
 #override OPTIONS += CLFFT_APPLE
 
-# used AMDs CLBlas library for iterative solver (currently just suported in bicg method)
-# This option will have no effect on the other method
-#override OPTIONS += USE_CLBLAS
+# used AMDs CLBlas library for iterative solver (currently just suported in bicg method, oo effect on the other methods)
+#override OPTIONS += OCL_BLAS
 
 # By default, this Makefile invokes a Bash script that will determine the current subversion revision and pass it to
 # ADDA source (so it is produced in the output of 'adda -V'. If this causes any problems (including significant delays),
@@ -309,8 +308,13 @@ ifneq ($(filter OCL_READ_SOURCE_RUNTIME,$(OPTIONS)),)
   # Here only the info is printed, the main logic is in ocl/Makefile
   $(info Read CL sources at runtime)
 endif
+ifneq ($(filter OCL_BLAS,$(OPTIONS)),)
+  # Here only the info is printed, the main logic is in ocl/Makefile
+  $(info Using clBLAS)
+endif
 ifneq ($(filter NO_SVNREV,$(OPTIONS)),)
   CDEFS += -DNO_SVNREV
+  $(info Skipping revision number)
 else
   # Get revision number if possible
   REV=$(shell sh updsvnrev.sh)
